<resources>
    <string name="app_name">OrganizeU</string>
    <string name="student_drawer_item_1">Home</string>
    <string name="student_drawer_item_2">Available Classroom</string>
    <string name="admin_drawer_item_1">Academic</string>
    <string name="admin_drawer_item_2">Timetable</string>
    <string name="admin_drawer_item_3">Faculty</string>
    <string name="admin_drawer_item_4">Rooms</string>
    <string name="admin_drawer_item_5">Subjects</string>
    <string name="app_launcher_image_text">Application Launcher Logo</string>
    <string name="ic_menu_text">Menu Icon</string>


    <string name="user_image_drawer_menu">Profile Image</string>
    <string name="userNameTextDrawerMenu">Student Name</string>
    <string name="AdminNameTextDrawerMenu">Admin Name</string>
    <string name="userOtherDetailsTextDrawerMenu">Sem: 8 Class: A Lab: AB5</string>
    <string name="textStartTime">9:05AM</string>
    <string name="textEndTime">9:55AM</string>
    <string name="textLessonNumber">Lesson: 1</string>
    <string name="textSubjectName">AI</string>
    <string name="textClassName">002 1NB</string>
    <string name="textFacultyName">MDT</string>
    <string name="textDuration">50 min</string>
    <string name="textType">LAB</string>
    <string name="dialog_btn_add">Add</string>
    <string name="dialog_btn_close">Close</string>

    <string name="need_permissions">Need Permissions</string>
    <string name="permission_description_1">In order for you use certain features of this app, you need to give permission. See description for each permission</string>
    <string name="storage_permission_image_description">Storage/Image Access Image</string>
    <string name="storage_permission_name">Photo Library</string>
    <string name="storage_permission_description">Allow to access your photos</string>
    <string name="camera_permission_image_description">Camera Permission Image</string>
    <string name="camera_permission_name">Camera</string>
    <string name="camera_permission_description">Allow to access your camera</string>
    <string name="permission_description_2">Permission are necessary for all the features and functions to work properly.</string>
    <string name="Allow">ALLOW</string>
    <string name="Done">Done</string>
    <string name="let_s_start">Let\'s Start</string>

    <string name="hint_select_subject_type">Select Subject Type</string>
    <string name="hint_subject_code">Subject Code</string>
    <string name="hint_subject_name">Subject Name</string>

    <string name="item_edit_button_content_description">Edit Button</string>
    <string name="item_delete_button_content_description">Delete Button</string>


    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <string name="middle_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin</string>

</resources>