<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_academic"
            android:title="@string/admin_drawer_item_1" />
        <item
            android:id="@+id/nav_timetable"
            android:title="@string/admin_drawer_item_2" />
        <item
            android:id="@+id/nav_faculty"
            android:title="@string/admin_drawer_item_3" />
        <item
            android:id="@+id/nav_room"
            android:title="@string/admin_drawer_item_4" />
        <item
            android:id="@+id/nav_subject"
            android:title="@string/admin_drawer_item_5" />
    </group>

    <!--<item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_aboutUs"
                android:title="About Us" />
            <item
                android:id="@+id/nav_sign_out"
                android:title="Sign out" />
        </menu>
    </item>-->
</menu>
